objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABN__c</fullName>
        <label>ABN</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACN__c</fullName>
        <label>ACN</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_GROUP__c</fullName>
        <description>This text field is updated by a workflow rule to show the ultimate parent of this account. If the account IS a GROUP, then the Account&apos;s name will be used.</description>
        <inlineHelpText>This text field is updated by a workflow rule to show the ultimate parent of this account. If the account IS a GROUP, then the Account&apos;s name will be used.</inlineHelpText>
        <label>Account GROUP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_GROUP_as_text__c</fullName>
        <formula>Account_GROUP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account GROUP as text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_hierarchy_depth__c</fullName>
        <description>This field is used to show the Child account level against the Parent in numeric value. eg 1=top account and 5=5th child in accounts. 
Child = 5, Parent = 4, Grandparent = 3, Great Grandparent = 2, Great Great Grandparent = 1</description>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), 6, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), 5, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), 4, 
IF(NOT(ISBLANK(Parent.Parent.Name)), 3, 
IF(NOT(ISBLANK(Parent.Name)),2, 
1)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account hierarchy depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_City_State_Postcode__c</fullName>
        <formula>if(isnull(BillingCity),&quot;&quot;,BillingCity) &amp; if(isnull(BillingState),&quot;&quot;, &quot;, &quot; &amp; BillingState)  &amp;  if(isnull( BillingPostalCode ),&quot;&quot;, &quot; &quot; &amp; BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in the briefing sheet template.</inlineHelpText>
        <label>Billing City State Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Locality__c</fullName>
        <label>Billing Locality</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMR_Account_Expiry__c</fullName>
        <formula>CASE(Client_Status__c, 
&quot;client&quot;, Current_Claim_Expiry__c ,
&quot;prospect&quot;,Current_Claim_Expiry__c ,
Suspect_Expiry_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Client status is Client or Proposect the date is the current claim expiry, if the client status is suspect, the date is the suspect expiry</inlineHelpText>
        <label>CMR Account Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMR_Account_Never_Claimed__c</fullName>
        <description>(False if a Client or Prospect, True is a Suspect)</description>
        <formula>CASE( Client_Status__c , 
&quot;Client&quot;, &quot;FALSE&quot;,
&quot;Prospect&quot;, &quot;FALSE&quot;,
&quot;True&quot;)</formula>
        <inlineHelpText>(False if a Client or Prospect, True is a Suspect)</inlineHelpText>
        <label>CMR Account Never Claimed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMR_Account_Status__c</fullName>
        <formula>IF( CMR_Account_Expiry__c &lt; TODAY(), &quot;EXPIRED&quot;, &quot;VALID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMR Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMR_Marketers__c</fullName>
        <description>Combines the marketers into one field</description>
        <formula>(Spot__r.Full_Name__c )
&amp;(&quot; &quot;)&amp;
(IF(  Spot_2__r.Full_Name__c &lt;&gt; Spot__r.Full_Name__c ,Spot_2__r.Full_Name__c,&quot;&quot;)
&amp;(&quot; &quot;)&amp;
(IF(  Sell_1__r.Full_Name__c &lt;&gt; Spot__r.Full_Name__c ,Sell_1__r.Full_Name__c ,&quot;&quot;)
&amp;(&quot; &quot;)&amp;

(IF(  Sell_2__r.Full_Name__c == Spot_2__r.Full_Name__c ,&quot; &quot;,&quot;&quot;)
&amp;(&quot; &quot;)&amp;

(IF(  (Sell_2__r.Full_Name__c &lt;&gt; Spot_2__r.Full_Name__c)
||
(Sell_2__r.Full_Name__c &lt;&gt; Spot__r.Full_Name__c)

 ,Sell_2__r.Full_Name__c,&quot;&quot;)

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Combines the marketers into one field</inlineHelpText>
        <label>CMR Marketers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned CSM</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CSC Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <inlineHelpText>Suspect: referral purposes only, before proposal stage. Public Program Pax
Prospect: proposal sent
Client: contracted ENSI In-house work
Free: free to sell to
Inactive: no longer in business
Exhausted: No opportunity of selling ENSI</inlineHelpText>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Exhausted</fullName>
                </value>
                <value>
                    <fullName>GROUP</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Network Member</fullName>
                </value>
                <value>
                    <fullName>Active Under Parent Account</fullName>
                    <isActive>false</isActive>
                    <label>Active Under Parent Account</label>
                </value>
                <value>
                    <fullName>Associate</fullName>
                    <isActive>false</isActive>
                    <label>Associate</label>
                </value>
                <value>
                    <fullName>Business Development Licencee</fullName>
                    <isActive>false</isActive>
                    <label>Business Development Licencee</label>
                </value>
                <value>
                    <fullName>ENS 4 Frens</fullName>
                    <isActive>false</isActive>
                    <label>ENS 4 Frens</label>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                    <isActive>false</isActive>
                    <label>EXPIRED</label>
                </value>
                <value>
                    <fullName>Ex ENS Licencee</fullName>
                    <isActive>false</isActive>
                    <label>Ex ENS Licencee</label>
                </value>
                <value>
                    <fullName>Ex ENS Marketer</fullName>
                    <isActive>false</isActive>
                    <label>Ex ENS Marketer</label>
                </value>
                <value>
                    <fullName>Ex LÕcee</fullName>
                    <isActive>false</isActive>
                    <label>Ex LÕcee</label>
                </value>
                <value>
                    <fullName>Ex Marketer</fullName>
                    <isActive>false</isActive>
                    <label>Ex Marketer</label>
                </value>
                <value>
                    <fullName>Inactive, Exhausted</fullName>
                    <isActive>false</isActive>
                    <label>Inactive, Exhausted</label>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                    <isActive>false</isActive>
                    <label>Lapsed</label>
                </value>
                <value>
                    <fullName>Lead</fullName>
                    <isActive>false</isActive>
                    <label>Lead</label>
                </value>
                <value>
                    <fullName>Licencee</fullName>
                    <isActive>false</isActive>
                    <label>Licencee</label>
                </value>
                <value>
                    <fullName>Licensee</fullName>
                    <isActive>false</isActive>
                    <label>Licensee</label>
                </value>
                <value>
                    <fullName>Managed</fullName>
                    <isActive>false</isActive>
                    <label>Managed</label>
                </value>
                <value>
                    <fullName>Marketer</fullName>
                    <isActive>false</isActive>
                    <label>Marketer</label>
                </value>
                <value>
                    <fullName>Negotium</fullName>
                    <isActive>false</isActive>
                    <label>Negotium</label>
                </value>
                <value>
                    <fullName>Not yet a customer</fullName>
                    <isActive>false</isActive>
                    <label>Not yet a customer</label>
                </value>
                <value>
                    <fullName>Pro Bono</fullName>
                    <isActive>false</isActive>
                    <label>Pro Bono</label>
                </value>
                <value>
                    <fullName>Prospective ENS Consultant</fullName>
                    <isActive>false</isActive>
                    <label>Prospective ENS Consultant</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Statusold__c</fullName>
        <inlineHelpText>Negotium: individual receiving Negotium
Suspect: referral purposes only, before proposal stage. Public Program Pax
Prospect: proposal sent
Client: contracted ENS In-house work
Free: free to market to
Inactive: no longer in business</inlineHelpText>
        <label>Client Status (Old)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Negotium</fullName>
                </value>
                <value>
                    <fullName>Active Under Parent Account</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Business Development Licencee</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>ENS 4 Frens</fullName>
                </value>
                <value>
                    <fullName>Ex ENS Licencee</fullName>
                </value>
                <value>
                    <fullName>Ex ENS Marketer</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>GROUP</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Licencee</fullName>
                </value>
                <value>
                    <fullName>Marketer</fullName>
                </value>
                <value>
                    <fullName>Prospective ENS Consultant</fullName>
                </value>
                <value>
                    <fullName>Public Program</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Pro Bono</fullName>
                </value>
                <value>
                    <fullName>Exhausted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>General comments of interest about this account.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Claim_Expiry__c</fullName>
        <inlineHelpText>1 year from the date of the last booked assignment or proposal submitted to the NAM.
This is an automated field</inlineHelpText>
        <label>Current Claim Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customs_Info__c</fullName>
        <inlineHelpText>include German EORI or Tax numbers required for overseas deliveries</inlineHelpText>
        <label>Customs Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department_name__c</fullName>
        <inlineHelpText>e.g. Marketing, Legal, IT</inlineHelpText>
        <label>Department name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Summary__c</fullName>
        <inlineHelpText>The first 255 characters of the Description field. This is used in custom and related lists and is updated via workflow every time Description is updated.</inlineHelpText>
        <label>Description Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division_name__c</fullName>
        <label>Division name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_market_OC_to_this_account_until__c</fullName>
        <inlineHelpText>If there is a date in this field do not market any Open Courses (OC) to this account or any related contacts until after this date has passed.</inlineHelpText>
        <label>Do not market OC to this account until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GROUP__c</fullName>
        <formula>IF (  ISNULL(ParentId ) 
       ,&quot;TRUE&quot;
       , &quot;FALSE&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GROUP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Reach__c</fullName>
        <label>Geographic Reach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Agreement_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Agreement Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Global Agreement Manager)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Agreement_Summary__c</fullName>
        <label>Global Agreement Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inherited_Global_Agreement_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inherited Global Agreement Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Inherited Global Agreement Manager)</relationshipLabel>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inherited_Global_Agreement_Summary__c</fullName>
        <inlineHelpText>This is Inherited from the Parent Account</inlineHelpText>
        <label>Inherited Global Agreement Summary</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Date_End__c</fullName>
        <label>Job Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licence_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used as part of Process builder to find current Licence</description>
        <label>Licence ID</label>
        <referenceTo>Licence__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licensing_Royalty_Annual_Payment_date__c</fullName>
        <inlineHelpText>Date of when the first in-house trainer is accredited</inlineHelpText>
        <label>Licensing/Royalty Annual Payment  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <description>LinkedIn URL</description>
        <label>LinkedIn URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_Source__c</fullName>
        <inlineHelpText>The marketing list that the account was sourced from.</inlineHelpText>
        <label>List Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Agreement__c</fullName>
        <inlineHelpText>General comments of interest about this account.</inlineHelpText>
        <label>Material Agreement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Sellers__c</fullName>
        <inlineHelpText>The text from the Sell field in FMPro for records where there was more than one seller.</inlineHelpText>
        <label>Multiple Sellers</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Spotters__c</fullName>
        <inlineHelpText>The text from the Spot field in FMPro for records where there was more than one spotter.</inlineHelpText>
        <label>Multiple Spotters</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Nam responsible for the account</description>
        <label>NAM responsible</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (NAM responsible)</relationshipLabel>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAM_of_parent_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NAM of parent account</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (NAM of parent account)</relationshipLabel>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nam_of_Direct_Parent__c</fullName>
        <formula>IF(
NOT(ISBLANK(Parent.NAM_Responsible__c)),
Parent.NAM_Responsible__c,
IF(
NOT(ISBLANK(Parent.NAM_of_parent_account__c)),
Parent.NAM_of_parent_account__c,
&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nam of Direct Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Opportunities_For_Account__c</fullName>
        <inlineHelpText>Displays the number of Opportunities that are attached to the Account</inlineHelpText>
        <label>Number Of Opportunities For Account</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>In-House, OC Course, OC Course profit split</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Old_CSC_ID__c</fullName>
        <inlineHelpText>ID # from FMPro</inlineHelpText>
        <label>Old CSC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Group_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Group ID from FMPro.</inlineHelpText>
        <label>Old Group ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Org_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Old org Number from FMPro.</inlineHelpText>
        <label>Old Org ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Sell_1_ID__c</fullName>
        <inlineHelpText>ID # from FMPro</inlineHelpText>
        <label>Old Sell 1 ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Spot_ID__c</fullName>
        <inlineHelpText>ID # from FMPro</inlineHelpText>
        <label>Old Spot ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Claim_Date__c</fullName>
        <inlineHelpText>Old Claim date from FMPRo</inlineHelpText>
        <label>Original Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processing_Field_for_Updates__c</fullName>
        <description>Used only for background updating of NAM parents</description>
        <label>Processing Field for Updates</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Old Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sell_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sell 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sell 1 Accounts</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sell_1_from_parent_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sell 1 from parent account</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Sell 1 from parent account)</relationshipLabel>
        <relationshipName>Accounts8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sell_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used if the Sell is shared between 2 people, otherwise leave blank</inlineHelpText>
        <label>Sell 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sell 2 Accounts</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Locality__c</fullName>
        <label>Shipping Locality</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spot_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the spot for an account is shared</inlineHelpText>
        <label>Spot 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Spot 2)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spot 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Spot Accounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry Old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Forestry and logging</fullName>
                </value>
                <value>
                    <fullName>2.</fullName>
                </value>
                <value>
                    <fullName>Accounting services</fullName>
                </value>
                <value>
                    <fullName>Business and professional associations</fullName>
                </value>
                <value>
                    <fullName>Management services and consultancies</fullName>
                </value>
                <value>
                    <fullName>Employment services</fullName>
                </value>
                <value>
                    <fullName>Labour organisations</fullName>
                </value>
                <value>
                    <fullName>Legal services</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Property operators and developers</fullName>
                </value>
                <value>
                    <fullName>Real estate agents</fullName>
                </value>
                <value>
                    <fullName>Technical services/asset management</fullName>
                </value>
                <value>
                    <fullName>IT, Information Technology</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Planning and design</fullName>
                </value>
                <value>
                    <fullName>Marketing/PR</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Facility Services</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>3.</fullName>
                </value>
                <value>
                    <fullName>Internet services</fullName>
                </value>
                <value>
                    <fullName>Postal services</fullName>
                </value>
                <value>
                    <fullName>Publishing, printing</fullName>
                </value>
                <value>
                    <fullName>Telecommunication services</fullName>
                </value>
                <value>
                    <fullName>Newspapers, magazines, print</fullName>
                </value>
                <value>
                    <fullName>4.</fullName>
                </value>
                <value>
                    <fullName>Other construction</fullName>
                </value>
                <value>
                    <fullName>Commercial Property Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industrys__c</fullName>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspect_Expiry_Date__c</fullName>
        <description>6 months for a suspect to be listed in the database. If no change then the account will revert to ‘Free’.</description>
        <formula>LastActivityDate + 180</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>6 months for a suspect to be listed in the database. If no change then the account will revert to ‘Free’.
Feild updates automatically</inlineHelpText>
        <label>Suspect Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspect_Expiry__c</fullName>
        <description>6 months for a suspect to be listed in the database. If no change then the account will revert to ‘Free’.</description>
        <inlineHelpText>6 months for a suspect to be listed in the database. If no change then the account will revert to ‘Free’.</inlineHelpText>
        <label>Suspect Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SysAd_Comments__c</fullName>
        <label>SysAd Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Archive__c</fullName>
        <formula>IF ( 
        OR (
                    ISPICKVAL(Client_Status__c ,&quot;Free&quot;)
                    , ISPICKVAL(Client_Status__c ,&quot;Suspect&quot;)
                    , ISPICKVAL(Client_Status__c ,&quot;Inactive&quot;)
                    , ISPICKVAL(Client_Status__c ,&quot;&quot;)
                )
         ,&quot;TRUE&quot;
         ,&quot;FALSE&quot;
     )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Archive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Account_Name__c</fullName>
        <description>Used to Identify the Top account record name Max 6 levels</description>
        <formula>BLANKVALUE(Parent.Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Parent.Name, 
BLANKVALUE(Parent.Parent.Name, 
BLANKVALUE(Parent.Name, 
Name)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <label>Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Organisation</fullName>
                    <default>true</default>
                    <label>Organisation</label>
                </value>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <formula>IF( GROUP__c = &quot;TRUE&quot;,  Name , &quot;ULTIMATE UNKNOWN&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ultimate Parent</label>
        <type>Text</type>
    </fields>
</CustomObject>